--- a/index.html
+++ b/index.html
@@ -1,89 +1,60 @@
 <!DOCTYPE html>
-<html lang="ur">
+<html lang="ur" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punjab Board 9th Class Results 2025</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f8f9fa;
-            direction: rtl;
-        }
-        h1 {
-            background-color: green;
-            color: white;
-            padding: 15px;
-        }
-        table {
-            margin: 20px auto;
-            border-collapse: collapse;
-            width: 80%;
-        }
-        table, th, td {
-            border: 1px solid #ccc;
-        }
-        th {
-            background-color: #28a745;
-            color: white;
-            padding: 10px;
-        }
-        td {
-            padding: 10px;
-        }
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <meta name="description" content="پنجاب کے تمام تعلیمی بورڈز کے 9ویں جماعت کے رزلٹ 2025 کے براہ راست لنکس۔ بہاولپور، ملتان، لاہور، فیصل آباد، گوجرانوالہ، راولپنڈی، سرگودھا، ساہیوال، ڈی جی خان بورڈ کا رزلٹ یہاں سے چیک کریں۔">
+    <meta name="keywords" content="Punjab Board 9th Result 2025, 9th Class Result 2025 Punjab, BISE Result 2025, Bahawalpur Board Result, Multan Board Result, Lahore Board Result, Faisalabad Board Result, Gujranwala Board Result, Rawalpindi Board Result, Sargodha Board Result, Sahiwal Board Result, DG Khan Board Result">
+    <meta name="author" content="Royal Properties Agent">
+    <title>پنجاب بورڈ 9ویں جماعت رزلٹ 2025 - تمام بورڈز کے لنکس</title>
 </head>
-<body>
+<body style="font-family: Arial; direction: rtl; text-align: center;">
+    <h1>پنجاب بورڈ 9ویں جماعت کا رزلٹ 2025</h1>
+    <p>نیچے اپنے بورڈ کا لنک منتخب کریں اور رزلٹ چیک کریں:</p>
 
-    <h1>پنجاب بورڈ 9ویں جماعت کے رزلٹ 2025</h1>
-    <p>اپنے متعلقہ بورڈ کے رزلٹ دیکھنے کے لیے نیچے دیے گئے لنک پر کلک کریں</p>
-
-    <table>
+    <table border="1" style="margin: auto; border-collapse: collapse; width: 80%;">
         <tr>
             <th>بورڈ کا نام</th>
             <th>رزلٹ لنک</th>
         </tr>
         <tr>
-            <td>BISE Bahawalpur</td>
-            <td><a href="https://www.bisebwp.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>بہاولپور بورڈ</td>
+            <td><a href="https://bisebwp.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE Multan</td>
-            <td><a href="https://web.bisemultan.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>ملتان بورڈ</td>
+            <td><a href="https://bisemultan.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE Lahore</td>
-            <td><a href="https://www.biselahore.com" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>لاہور بورڈ</td>
+            <td><a href="https://www.biselahore.com/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE Faisalabad</td>
-            <td><a href="https://www.bisefsd.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>فیصل آباد بورڈ</td>
+            <td><a href="https://www.bisefsd.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE DG Khan</td>
-            <td><a href="https://www.bisedgkhan.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>گوجرانوالہ بورڈ</td>
+            <td><a href="https://www.bisegrw.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE Sargodha</td>
-            <td><a href="https://www.bisesargodha.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>راولپنڈی بورڈ</td>
+            <td><a href="https://www.biserwp.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE Gujranwala</td>
-            <td><a href="https://www.bisegrw.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>سرگودھا بورڈ</td>
+            <td><a href="https://www.bisesargodha.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
         <tr>
-            <td>BISE Rawalpindi</td>
-            <td><a href="https://www.biserwp.edu.pk" target="_blank">رزلٹ دیکھیں</a></td>
+            <td>ساہیوال بورڈ</td>
+            <td><a href="https://www.bisesahiwal.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
+        </tr>
+        <tr>
+            <td>ڈی جی خان بورڈ</td>
+            <td><a href="https://www.bisedgkhan.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
         </tr>
     </table>
 
+    <p style="margin-top: 20px;">یہ ویب سائٹ آپ کو تمام پنجاب بورڈز کے رزلٹ تک براہ راست رسائی فراہم کرتی ہے۔</p>
 </body>
 </html>
