--- a/index.html
+++ b/index.html
@@ -3,58 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="پنجاب کے تمام تعلیمی بورڈز کے 9ویں جماعت کے رزلٹ 2025 کے براہ راست لنکس۔ بہاولپور، ملتان، لاہور، فیصل آباد، گوجرانوالہ، راولپنڈی، سرگودھا، ساہیوال، ڈی جی خان بورڈ کا رزلٹ یہاں سے چیک کریں۔">
-    <meta name="keywords" content="Punjab Board 9th Result 2025, 9th Class Result 2025 Punjab, BISE Result 2025, Bahawalpur Board Result, Multan Board Result, Lahore Board Result, Faisalabad Board Result, Gujranwala Board Result, Rawalpindi Board Result, Sargodha Board Result, Sahiwal Board Result, DG Khan Board Result">
-    <meta name="author" content="Royal Properties Agent">
-    <title>پنجاب بورڈ 9ویں جماعت رزلٹ 2025 - تمام بورڈز کے لنکس</title>
+    <meta name="description" content="Punjab School Past Papers, Results, and Education News - ایک ہی جگہ پر تمام اسکول کی معلومات">
+    <meta name="keywords" content="Punjab Schools, Past Papers, Results, School News, Punjab Education">
+    <meta name="author" content="Muhammad Akbar">
+    <title>Punjab Schools Information</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background: #f9f9f9;
+            direction: rtl;
+        }
+        header {
+            background: #006400;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+        nav {
+            background: #228B22;
+            display: flex;
+            justify-content: center;
+        }
+        nav a {
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background: #006400;
+        }
+        .container {
+            padding: 20px;
+        }
+        h2 {
+            color: #006400;
+        }
+        footer {
+            background: #006400;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+        .box {
+            background: white;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 5px #ccc;
+        }
+    </style>
 </head>
-<body style="font-family: Arial; direction: rtl; text-align: center;">
-    <h1>پنجاب بورڈ 9ویں جماعت کا رزلٹ 2025</h1>
-    <p>نیچے اپنے بورڈ کا لنک منتخب کریں اور رزلٹ چیک کریں:</p>
+<body>
 
-    <table border="1" style="margin: auto; border-collapse: collapse; width: 80%;">
-        <tr>
-            <th>بورڈ کا نام</th>
-            <th>رزلٹ لنک</th>
-        </tr>
-        <tr>
-            <td>بہاولپور بورڈ</td>
-            <td><a href="https://bisebwp.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>ملتان بورڈ</td>
-            <td><a href="https://bisemultan.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>لاہور بورڈ</td>
-            <td><a href="https://www.biselahore.com/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>فیصل آباد بورڈ</td>
-            <td><a href="https://www.bisefsd.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>گوجرانوالہ بورڈ</td>
-            <td><a href="https://www.bisegrw.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>راولپنڈی بورڈ</td>
-            <td><a href="https://www.biserwp.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>سرگودھا بورڈ</td>
-            <td><a href="https://www.bisesargodha.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>ساہیوال بورڈ</td>
-            <td><a href="https://www.bisesahiwal.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-        <tr>
-            <td>ڈی جی خان بورڈ</td>
-            <td><a href="https://www.bisedgkhan.edu.pk/" target="_blank">رزلٹ چیک کریں</a></td>
-        </tr>
-    </table>
+<header>
+    <h1>پنجاب اسکول انفارمیشن</h1>
+    <p>پاسٹ پیپرز، رزلٹس اور تعلیمی خبریں</p>
+</header>
 
-    <p style="margin-top: 20px;">یہ ویب سائٹ آپ کو تمام پنجاب بورڈز کے رزلٹ تک براہ راست رسائی فراہم کرتی ہے۔</p>
+<nav>
+    <a href="#home">ہوم</a>
+    <a href="#past-papers">پاسٹ پیپرز</a>
+    <a href="#results">رزلٹس</a>
+    <a href="#news">خبریں</a>
+</nav>
+
+<div class="container">
+
+    <section id="home" class="box">
+        <h2>خوش آمدید</h2>
+        <p>یہ ویب سائٹ پنجاب کے تمام اسکولز کی معلومات فراہم کرتی ہے۔ آپ یہاں پاسٹ پیپرز، رزلٹس اور تعلیمی خبریں دیکھ سکتے ہیں۔</p>
+    </section>
+
+    <section id="past-papers" class="box">
+        <h2>پاسٹ پیپرز</h2>
+        <ul>
+            <li>میٹرک 2023 پاسٹ پیپرز (PDF)</li>
+            <li>انٹرمیڈیٹ 2023 پاسٹ پیپرز (PDF)</li>
+            <li>میٹرک 2022 پاسٹ پیپرز (PDF)</li>
+        </ul>
+    </section>
+
+    <section id="results" class="box">
+        <h2>رزلٹس</h2>
+        <ul>
+            <li>میٹرک رزلٹ 2024 - جلد آنے والا ہے</li>
+            <li>انٹرمیڈیٹ رزلٹ 2024 - جلد آنے والا ہے</li>
+        </ul>
+    </section>
+
+    <section id="news" class="box">
+        <h2>تعلیمی خبریں</h2>
+        <p>پنجاب حکومت نے اسکولوں کے لیے نئی اسکیم متعارف کروائی ہے۔ مزید تفصیلات جلد شامل کی جائیں گی۔</p>
+    </section>
+
+</div>
+
+<footer>
+    <p>© 2025 پنجاب اسکول انفارمیشن | Developed by Muhammad Akbar</p>
+</footer>
+
 </body>
 </html>
