--- a/index.html
+++ b/index.html
@@ -3,105 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Punjab School Past Papers, Results, and Education News - ایک ہی جگہ پر تمام اسکول کی معلومات">
-    <meta name="keywords" content="Punjab Schools, Past Papers, Results, School News, Punjab Education">
-    <meta name="author" content="Muhammad Akbar">
-    <title>Punjab Schools Information</title>
+    <meta name="description" content="Punjab Results - Punjab ke sab schools aur boards ke results online dekhein. 2025 ke results sabse pehle yahan!">
+    <meta name="keywords" content="Punjab Results, School Results, Board Results, 2025, Matric, Intermediate, 9th, 10th, 1st Year, 2nd Year">
+    <meta name="author" content="Punjab Results">
+    <title>Punjab Results 2025 - تمام اسکولوں اور بورڈز کے رزلٹ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            background: #f9f9f9;
-            direction: rtl;
-        }
-        header {
-            background: #006400;
-            color: white;
-            padding: 15px;
+            background: #f4f4f4;
+            color: #333;
             text-align: center;
         }
-        nav {
-            background: #228B22;
-            display: flex;
-            justify-content: center;
-        }
-        nav a {
+        header {
+            background: #008000;
             color: white;
-            padding: 10px 20px;
-            text-decoration: none;
+            padding: 15px;
         }
-        nav a:hover {
-            background: #006400;
+        h1 {
+            margin: 0;
         }
         .container {
             padding: 20px;
         }
-        h2 {
-            color: #006400;
-        }
-        footer {
+        .btn {
+            display: inline-block;
             background: #006400;
             color: white;
-            text-align: center;
-            padding: 10px;
-        }
-        .box {
-            background: white;
-            padding: 15px;
-            margin-bottom: 20px;
+            padding: 10px 20px;
+            margin: 10px;
+            text-decoration: none;
             border-radius: 5px;
-            box-shadow: 0px 0px 5px #ccc;
+        }
+        .btn:hover {
+            background: #004d00;
+        }
+        footer {
+            background: #222;
+            color: #ccc;
+            padding: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Punjab Results 2025</h1>
+        <p>پنجاب کے تمام اسکولوں اور بورڈز کے رزلٹ سب سے پہلے</p>
+    </header>
 
-<header>
-    <h1>پنجاب اسکول انفارمیشن</h1>
-    <p>پاسٹ پیپرز، رزلٹس اور تعلیمی خبریں</p>
-</header>
+    <div class="container">
+        <h2>اپنا رزلٹ چیک کریں</h2>
+        <a href="#" class="btn">میٹرک 2025 رزلٹ</a>
+        <a href="#" class="btn">انٹرمیڈیٹ 2025 رزلٹ</a>
+        <a href="#" class="btn">نویں کلاس رزلٹ</a>
+        <a href="#" class="btn">دسویں کلاس رزلٹ</a>
+        <a href="#" class="btn">پہلا سال رزلٹ</a>
+        <a href="#" class="btn">دوسرا سال رزلٹ</a>
+    </div>
 
-<nav>
-    <a href="#home">ہوم</a>
-    <a href="#past-papers">پاسٹ پیپرز</a>
-    <a href="#results">رزلٹس</a>
-    <a href="#news">خبریں</a>
-</nav>
-
-<div class="container">
-
-    <section id="home" class="box">
-        <h2>خوش آمدید</h2>
-        <p>یہ ویب سائٹ پنجاب کے تمام اسکولز کی معلومات فراہم کرتی ہے۔ آپ یہاں پاسٹ پیپرز، رزلٹس اور تعلیمی خبریں دیکھ سکتے ہیں۔</p>
-    </section>
-
-    <section id="past-papers" class="box">
-        <h2>پاسٹ پیپرز</h2>
-        <ul>
-            <li>میٹرک 2023 پاسٹ پیپرز (PDF)</li>
-            <li>انٹرمیڈیٹ 2023 پاسٹ پیپرز (PDF)</li>
-            <li>میٹرک 2022 پاسٹ پیپرز (PDF)</li>
-        </ul>
-    </section>
-
-    <section id="results" class="box">
-        <h2>رزلٹس</h2>
-        <ul>
-            <li>میٹرک رزلٹ 2024 - جلد آنے والا ہے</li>
-            <li>انٹرمیڈیٹ رزلٹ 2024 - جلد آنے والا ہے</li>
-        </ul>
-    </section>
-
-    <section id="news" class="box">
-        <h2>تعلیمی خبریں</h2>
-        <p>پنجاب حکومت نے اسکولوں کے لیے نئی اسکیم متعارف کروائی ہے۔ مزید تفصیلات جلد شامل کی جائیں گی۔</p>
-    </section>
-
-</div>
-
-<footer>
-    <p>© 2025 پنجاب اسکول انفارمیشن | Developed by Muhammad Akbar</p>
-</footer>
-
+    <footer>
+        <p>© 2025 PunjabResults.com - تمام حقوق محفوظ ہیں</p>
+    </footer>
 </body>
 </html>
