--- a/index_seo.html
+++ b/index_seo.html
@@ -1,82 +1,46 @@
 <!DOCTYPE html>
 <html lang="ur" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="پنجاب بورڈ 9ویں جماعت کے رزلٹ 2025 - تمام پنجاب بورڈز کے رزلٹ چیک کرنے کے لیے براہ راست لنکس۔">
-    <meta name="keywords" content="Punjab Board 9th Result 2025, 9th Class Result 2025 Punjab, BISE Result 2025, Bahawalpur Board Result, Lahore Board Result, Multan Board Result, Faisalabad Board Result, Gujranwala Board Result, Rawalpindi Board Result, DG Khan Board Result, Sargodha Board Result">
-    <meta name="author" content="Royal Properties Agent">
-    <title>پنجاب بورڈ 9ویں جماعت کا رزلٹ 2025 - تمام بورڈز کے لنکس</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>9th, 10th, Matric & Intermediate Result 2025 Punjab - Online Check</title>
+    <meta name="description" content="9th class result, 10th class result, matric and intermediate results 2025 Punjab boards online check کریں۔ سب سے پہلے اور آسان طریقہ۔" />
+    <meta name="keywords" content="9th class result 2025, 10th class result 2025, matric result 2025, intermediate result 2025, Punjab board result, online result check" />
+    <meta name="author" content="Punjab Results" />
     <style>
-        body {
-            font-family: 'Noto Nastaliq Urdu', serif;
-            background-color: #f9f9f9;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        h1 {
-            background-color: #006400;
-            color: white;
-            padding: 20px;
-            margin: 0;
-        }
-        table {
-            margin: 30px auto;
-            border-collapse: collapse;
-            width: 90%;
-            max-width: 800px;
-            background: white;
-            box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 15px;
-            font-size: 18px;
-        }
-        th {
-            background-color: #228B22;
-            color: white;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        a {
-            color: #006400;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            margin-top: 40px;
-            padding: 15px;
-            background-color: #006400;
-            color: white;
-        }
+        /* آپ کا موجودہ CSS یہاں رہے گا */
     </style>
 </head>
 <body>
-    <h1>پنجاب بورڈ 9ویں جماعت کا رزلٹ 2025</h1>
-    <p>نیچے دیے گئے چارٹ میں اپنے بورڈ کے سامنے موجود لنک پر کلک کر کے رزلٹ چیک کریں۔</p>
-    <table>
-        <tr>
-            <th>بورڈ کا نام</th>
-            <th>رزلٹ لنک</th>
-        </tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، بہاولپور</td><td><a href="https://bisebwp.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، ملتان</td><td><a href="https://web.bisemultan.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، لاہور</td><td><a href="https://www.biselahore.com" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، فیصل آباد</td><td><a href="https://www.bisefsd.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، ڈی جی خان</td><td><a href="https://www.bisedgkhan.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، سرگودھا</td><td><a href="https://www.bisesargodha.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، گوجرانوالہ</td><td><a href="https://www.bisegrw.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-        <tr><td>بورڈ آف انٹرمیڈیٹ اینڈ سیکنڈری ایجوکیشن، راولپنڈی</td><td><a href="https://www.biserwp.edu.pk" target="_blank">رزلٹ دیکھیں</a></td></tr>
-    </table>
-    <footer>
-        © 2025 رائل پراپرٹیز ایجنٹ | تمام حقوق محفوظ ہیں
-    </footer>
+    <header>
+        <h1>Punjab Results 2025</h1>
+        <p>پنجاب کے تمام اسکولوں اور بورڈز کے رزلٹ سب سے پہلے</p>
+    </header>
+
+    <div class="container">
+        <h2>اپنا رزلٹ چیک کریں</h2>
+
+        <!-- آپ کے بٹن یہاں ہوں گے -->
+
+        <section style="text-align: right; max-width: 700px; margin: 30px auto; direction: rtl; font-size: 16px; line-height: 1.5;">
+            <h3>2025 کے تمام کلاسز کے رزلٹ یہاں آسانی سے دیکھیں</h3>
+            <p>
+                کیا آپ 9th class result 2025 یا 10th class result 2025 تلاش کر رہے ہیں؟  
+                آپ صحیح جگہ پر آئے ہیں! ہماری ویب سائٹ پر آپ پنجاب کے تمام بورڈز کے میٹرک اور انٹرمیڈیٹ رزلٹ آسانی سے چیک کر سکتے ہیں۔
+            </p>
+            <p>
+                Punjab Boards جیسے BISE Lahore, Gujranwala, Rawalpindi, Faisalabad, Sahiwal, Multan اور Bahawalpur کے رزلٹ کی تازہ ترین اپڈیٹس اور لنکس یہاں دستیاب ہیں۔
+            </p>
+            <p>
+                ہمارا مقصد ہے کہ آپ کو رزلٹ تک پہنچنے کا سب سے آسان اور تیز راستہ فراہم کریں تاکہ آپ بغیر کسی پریشانی کے اپنا نتیجہ دیکھ سکیں۔
+            </p>
+            <p style="direction: ltr;">
+                Search keywords: 9th class result 2025 Punjab, 10th class result 2025 Punjab, matric result 2025, intermediate result 2025 Punjab boards online.
+            </p>
+        </section>
+    </div>
+
+    <!-- باقی آپ کا کوڈ، جاواسکرپٹ وغیرہ یہاں رہے گا -->
+
 </body>
 </html>
