--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>9th, 10th, Matric & Intermediate Result 2025 Punjab - Online Check</title>
+<title>Punjab Results 2025 - Online Check</title>
 <meta name="description" content="9th class result, 10th class result, matric and intermediate results 2025 Punjab boards online check. Easy and fastest way." />
 <meta name="keywords" content="9th class result 2025, 10th class result 2025, matric result 2025, intermediate result 2025, Punjab board result, online result check" />
 <meta name="author" content="Punjab Results" />
@@ -16,12 +16,9 @@
     padding: 0;
     text-align: center;
   }
-  header {
-    background: #008000;
-    color: white;
-    padding: 15px;
-  }
-  h1, h2, h3 {
+  /* header removed as requested */
+
+  h2, h3 {
     margin: 10px 0;
   }
   .container {
@@ -132,11 +129,6 @@
 </style>
 </head>
 <body>
-
-<header>
-  <h1>Punjab Results 2025</h1>
-  <p>Check results of all schools and boards in Punjab first</p>
-</header>
 
 <div class="container">
 
