--- a/index.html
+++ b/index.html
@@ -1,271 +1,87 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Punjab Results 2025 - Online Check</title>
-<meta name="description" content="9th class result, 10th class result, matric and intermediate results 2025 Punjab boards online check. Easy and fastest way." />
-<meta name="keywords" content="9th class result 2025, 10th class result 2025, matric result 2025, intermediate result 2025, Punjab board result, online result check" />
-<meta name="author" content="Punjab Results" />
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f4f4f4;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  /* header removed as requested */
-
-  h2, h3 {
-    margin: 10px 0;
-  }
-  .container {
-    padding: 20px;
-    max-width: 900px;
-    margin: 0 auto;
-    text-align: left;
-    direction: ltr;
-  }
-  .btn {
-    display: inline-block;
-    background: #006400;
-    color: white;
-    padding: 10px 20px;
-    margin: 10px 7px;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 16px;
-  }
-  .btn:hover {
-    background: #004d00;
-  }
-  #board-selection {
-    margin-top: 25px;
-    display: none;
-    text-align: left;
-  }
-  select {
-    padding: 8px;
-    font-size: 16px;
-    width: 100%;
-    max-width: 320px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  #result-link {
-    display: none;
-    margin-top: 15px;
-    padding: 10px 20px;
-    background: #004d00;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-  }
-  .info-box {
-    background: #fff3cd;
-    color: #856404;
-    padding: 15px 20px;
-    margin: 30px auto;
-    max-width: 700px;
-    border: 1px solid #ffeeba;
-    border-radius: 6px;
-    font-size: 16px;
-    text-align: right;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    direction: rtl;
-  }
-  .info-box ul {
-    padding-left: 20px;
-    margin: 10px 0;
-    list-style-type: disc;
-    text-align: right;
-  }
-  footer {
-    background: #222;
-    color: #ccc;
-    padding: 10px;
-    margin-top: 30px;
-    font-size: 14px;
-  }
-  /* Modal styles */
-  .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 999; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.5); 
-  }
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 90%;
-    max-width: 400px;
-    border-radius: 8px;
-    text-align: center;
-  }
-  .close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  .close-btn:hover,
-  .close-btn:focus {
-    color: black;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Education Info</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f7f7;
+            text-align: center;
+        }
+        header {
+            background-color: #0077b6;
+            color: white;
+            padding: 15px;
+            font-size: 24px;
+        }
+        main {
+            padding: 20px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: #ff5722;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #e64a19;
+        }
+        .instructions {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 15px;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            direction: rtl;
+            font-family: 'Noto Nastaliq Urdu', serif;
+        }
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
+    </style>
+    <script>
+        function showWhatsApp() {
+            alert("TikTok UK aur USA accounts khareedne ke liye rabta karein: 03028647505");
+        }
+    </script>
 </head>
 <body>
 
-<div class="container">
+<header>Education Info</header>
 
-  <h2>Check Your Result</h2>
+<main>
+    <h1>Welcome to Education Info</h1>
+    <p>Search for your class results and more.</p>
 
-  <div>
-    <a href="#" class="btn" onclick="showBoardSelection('matric')">Matric 2025 Result</a>
-    <a href="#" class="btn" onclick="showBoardSelection('intermediate')">Intermediate 2025 Result</a>
-    <a href="#" class="btn" onclick="showBoardSelection('class9')">9th Class Result</a>
-    <a href="#" class="btn" onclick="showBoardSelection('class10')">10th Class Result</a>
-    <a href="#" class="btn" onclick="showBoardSelection('firstYear')">1st Year Result</a>
-    <a href="#" class="btn" onclick="showBoardSelection('secondYear')">2nd Year Result</a>
-  </div>
+    <button onclick="showWhatsApp()">Buy TikTok UK & USA Accounts</button>
 
-  <div id="board-selection">
-    <h3>Select Board:</h3>
-    <select id="board-dropdown" onchange="updateResultLink()">
-      <option value="">-- Select Board --</option>
-      <option value="biseLahore">BISE Lahore</option>
-      <option value="biseGujranwala">BISE Gujranwala</option>
-      <option value="biseRawalpindi">BISE Rawalpindi</option>
-      <option value="biseFaisalabad">BISE Faisalabad</option>
-      <option value="biseSahiwal">BISE Sahiwal</option>
-      <option value="biseMultan">BISE Multan</option>
-      <option value="biseBahawalpur">BISE Bahawalpur</option>
-    </select>
-    <br />
-    <a id="result-link" href="#" target="_blank">View Result</a>
-  </div>
+    <div class="instructions">
+        <h3>ہدایات</h3>
+        <p>یہ ویب سائٹ تمام کلاسز کے نتائج فراہم کرتی ہے۔</p>
+        <p>ٹک ٹاک یوکے اور یو ایس اے اکاؤنٹس صرف طلباء کے لیے 499 روپے میں دستیاب ہیں۔</p>
+    </div>
 
-  <!-- Buy TikTok Accounts Button -->
-  <div style="margin-top: 30px;">
-    <button class="btn" style="background:#25D366;" onclick="openModal()">
-      Buy TikTok UK and USA Accounts
-    </button>
-  </div>
+    <h3>Visitor Counter</h3>
+    <!-- hitwebcounter Code START -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=21378059&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0" />
+    </a>
+    <!-- hitwebcounter Code END -->
 
-  <div class="info-box">
-    <strong>رزلٹ کے بارے میں اہم معلومات:</strong>
-    <ul>
-      <li>پنجاب کے بورڈز کا میٹرک اور انٹرمیڈیٹ رزلٹ عام طور پر جون یا جولائی میں جاری ہوتا ہے۔ تازہ ترین اپڈیٹس کے لیے ہماری ویب سائٹ چیک کرتے رہیں۔</li>
-      <li>رزلٹ چیک کرنے کے لیے اپنا رول نمبر اور بورڈ منتخب کریں۔</li>
-      <li>اگر رزلٹ میں کوئی غلطی نظر آئے تو فوراً متعلقہ بورڈ یا سکول سے رابطہ کریں۔</li>
-      <li>اگر آپ رزلٹ سے مطمئن نہیں تو ری چیکنگ یا اپیل کے لیے متعلقہ بورڈ کی ہدایات دیکھیں۔</li>
-      <li>اگر ویب سائٹ پر رزلٹ نہ آئے تو کچھ دیر بعد دوبارہ کوشش کریں یا قریبی تعلیمی ادارے سے رابطہ کریں۔</li>
-      <li>رزلٹ دیکھنے کے بعد اسے پرنٹ کر لیں تاکہ آپ کے پاس محفوظ ریکارڈ رہے۔</li>
-      <li>ہماری ویب سائٹ آپ کو براہِ راست آفیشل بورڈ کی سائٹس پر لے جاتی ہے تاکہ آپ کا ڈیٹا محفوظ اور درست رہے۔</li>
-      <li><strong>TikTok UK اور USA Accounts دستیاب ہیں، صرف اسٹوڈنٹ آفر: 499 روپے میں!</strong></li>
-    </ul>
-    <em>ہم آپ کی سہولت کے لیے ہمیشہ کوشاں ہیں کہ آپ کا رزلٹ آسانی سے اور جلدی حاصل ہو۔</em>
-  </div>
-
-</div>
-
-<!-- Modal -->
-<div id="whatsappModal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeModal()">&times;</span>
-    <h2>Contact via WhatsApp</h2>
-    <p>Please contact this number to buy TikTok UK and USA accounts:</p>
-    <p style="font-weight: bold; font-size: 18px; color: #25D366;">+92 302 8647505</p>
-    <a href="https://wa.me/923028647505" target="_blank" class="btn" style="background:#25D366; text-decoration:none;">Open WhatsApp Chat</a>
-  </div>
-</div>
-
-<script>
-  let currentClass = "";
-
-  function showBoardSelection(className) {
-    currentClass = className;
-    document.getElementById('board-selection').style.display = 'block';
-    document.getElementById('board-dropdown').value = "";
-    const resultLink = document.getElementById('result-link');
-    resultLink.style.display = 'none';
-    resultLink.href = "#";
-  }
-
-  function updateResultLink() {
-    const board = document.getElementById('board-dropdown').value;
-    const link = document.getElementById('result-link');
-
-    if (!board) {
-      link.style.display = 'none';
-      link.href = "#";
-      return;
-    }
-
-    let url = "";
-
-    if (
-      currentClass === "matric" ||
-      currentClass === "intermediate" ||
-      currentClass === "class9" ||
-      currentClass === "class10" ||
-      currentClass === "firstYear" ||
-      currentClass === "secondYear"
-    ) {
-      if (board === "biseLahore") url = "https://www.biselahore.com/result/";
-      else if (board === "biseGujranwala") url = "https://www.bisegrw.com/result/";
-      else if (board === "biseRawalpindi") url = "https://www.biserwp.edu.pk/result/";
-      else if (board === "biseFaisalabad") url = "https://www.bisefsd.edu.pk/result/";
-      else if (board === "biseSahiwal") url = "https://www.bisesahiwal.edu.pk/result/";
-      else if (board === "biseMultan") url = "https://www.bisemultan.edu.pk/result/";
-      else if (board === "biseBahawalpur") url = "https://www.bisebwp.edu.pk/result/";
-      else url = "#";
-    } else {
-      url = "#";
-    }
-
-    if (url === "#") {
-      link.style.display = 'none';
-      link.href = "#";
-    } else {
-      link.href = url;
-      link.style.display = 'inline-block';
-    }
-  }
-
-  // Modal open/close
-  function openModal() {
-    document.getElementById('whatsappModal').style.display = 'block';
-  }
-  function closeModal() {
-    document.getElementById('whatsappModal').style.display = 'none';
-  }
-
-  // Close modal if clicked outside content
-  window.onclick = function(event) {
-    const modal = document.getElementById('whatsappModal');
-    if (event.target == modal) {
-      closeModal();
-    }
-  }
-</script>
+</main>
 
 <footer>
-  <p>© 2025 PunjabResults.com - تمام حقوق محفوظ ہیں</p>
+    &copy; 2025 Education Info - All rights reserved.
 </footer>
 
 </body>
